Stop input file path from overflowing container

--- a/style.scss
+++ b/style.scss
@@ -73,6 +73,11 @@ form {
   }
 }
 
+input[type="file"],
+input[type="file"] * {
+  max-width: 300px;
+}
+
 .form-row {
   display: flex;
   flex-direction: column;
